site/content/docs/v0.6.0/cli-reference/ark_plugin_remove.md
---
title: "ark plugin remove"
layout: docs
---

Remove a plugin

### Synopsis


Remove a plugin

```
ark plugin remove [NAME | IMAGE] [flags]
```

### Options

```
  -h, --help   help for remove
```

### Options inherited from parent commands

```
      --alsologtostderr                  log to standard error as well as files
      --kubeconfig string                Path to the kubeconfig file to use to talk to the Kubernetes apiserver. If unset, try the environment variable KUBECONFIG, as well as in-cluster configuration
      --log_backtrace_at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                   If non-empty, write log files in this directory
      --logtostderr                      log to standard error instead of files
      --stderrthreshold severity         logs at or above this threshold go to stderr (default 2)
  -v, --v Level                          log level for V logs
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO
* [ark plugin](ark_plugin.md)	 - Work with plugins

